--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 #men {
-    position: absolute;
-    top: 8px;
-    left: 16px;
+    position: fixed;
+	top: 25px;
+	left: 25px;
+    z-index: 99 !important;
 }
